fix:overflow scroll and scroll styles

--- a/browser-extension/common/src/popup/components/Popup/popup.css
+++ b/browser-extension/common/src/popup/components/Popup/popup.css
@@ -211,7 +211,21 @@
 
 .record-list {
   overflow: auto;
-  max-height: 300px;
+  height: 230px;
+}
+
+.record-list::-webkit-scrollbar {
+  width: 0.5rem;
+}
+
+.record-list::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  border-radius: var(--border-radius);
+}
+
+.record-list::-webkit-scrollbar-thumb {
+  background-color: var(--surface-2);
+  border-radius: var(--border-radius);
 }
 
 .record-name-container {
